i18n errors removed + styles now better

--- a/src/i18n.md
+++ b/src/i18n.md
@@ -4,13 +4,13 @@
 
 * Thibaut Assus, developer since 2007, notably with ruby + rails
 * French here with a business visa
-* working for my company in France named Milesrock.
-* I Will talk about internationalization (i-18-n => i18n)
+* Working for my company in France named Milesrock.
+* I will talk about internationalization (i-18-n => i18n)
 
 !SLIDE
 
 * Because english isn't everything for everyone !
-* Some clients wants i18n of their app (for example in Chinese)
+* Some clients want i18n of their app (for example in Chinese)
 * 2 subjects :
   * i18n of the app
   * i18n of the data, which is more difficult
@@ -22,7 +22,8 @@
 !SLIDE
 
 * Built-in in rails, the i18n of the app is really easy to implement !
-*Just edit the following files !*
+
+  *Just edit the following files !*
 
 <pre>
   /config/locales/[en,fr].yml
@@ -39,9 +40,9 @@
 If I declare that test node in
 
 @@@ yaml
-    fr:
-        company:
-            test: My Test
+  fr:
+    company:
+      test: My Test
 @@@
 
 I can use it by calling I18n.t("company.test") or t("company.test") or even t(".test"),
