finish the conf

--- a/src/i18n.md
+++ b/src/i18n.md
@@ -4,7 +4,8 @@
 
 * Thibaut Assus, developer since 2007, notably with ruby + rails [http://github.com/tibastral](http://github.com/tibastral)
 * French here with a business visa
-* Working for my company in France named Milesrock.
+* Working for my company in France named Milesrock, a development consulting
+  company.
 * I will talk about internationalization (i-18-n => i18n)
 
 !SLIDE
@@ -236,8 +237,12 @@ So I can do
   Post.search(:post\_translations\_title\_starts\_with => "hello")
 @@@
 
-### So to be short :
-Puret, and Meta Search are readable enough, not too magical and saved me a LOT of time in my last rails project !
+!SLIDE
+
+### So to be short, what to remember ?
+
+* I18n is dead simple with rails 3
+* Puret, and Meta Search are readable enough, not too magical and will save you a LOT of time in your next i18ned rails project !
 
 !SLIDE
 
@@ -249,7 +254,7 @@ Puret, and Meta Search are readable enough, not too magical and saved me a LOT o
 
 [tibastral@gmail.com](mailto:tibastral@gmail.com)
 
-## If you want to use that conf, help yourself :
+## If you want to use / fork these slides, help yourself :
 
 [github.com/tibastral/i18n-pres](http://github.com/tibastral/i18n-pres)
 
