last commitment before presentation ;)

--- a/src/i18n.md
+++ b/src/i18n.md
@@ -44,7 +44,12 @@ If I declare that "pipe" node in tabacco
 
 ![Fr.Yml](../images/fr.yml.png)
 
-I can use it by calling I18n.t("tabacco.pipe") or t("tabacco.pipe") or even t(".pipe"),
+I can use it by calling
+
+* I18n.t("tabacco.pipe")
+* t("tabacco.pipe") 
+* even t(".pipe")
+
 with the locale set to "fr" !
 
 !SLIDE
@@ -132,7 +137,9 @@ element in another table, and reference everything from the root table...
 
 [Puret : https://github.com/jo/puret](https://github.com/jo/puret)
 
-And it does everything for you (without being too intrusive of course)
+And it does everything for you
+
+(without being too intrusive of course)
 
 !SLIDE
 
@@ -271,3 +278,7 @@ Sassly hacked
 ## Content essentially from :
 
 [Rails guides i18n](http://guides.rubyonrails.org/i18n.html)
+
+!SLIDE
+
+# Thank You !
